--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -7,6 +8,19 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!-- Tally display at the top -->
+    <TextView
+        android:id="@+id/tallyTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Completed: 0  Failed: 0"
+        android:textSize="18sp"
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="16dp" />
+
+    <!-- Your existing content, e.g., chef images, etc. -->
     <ImageView
         android:id="@+id/imageViewChef1"
         android:layout_width="100dp"
@@ -16,7 +30,7 @@
         android:scaleType="fitCenter"
         android:src="@drawable/chef"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tallyTextView" />
 
     <ImageView
         android:id="@+id/imageViewChef2"
@@ -53,8 +67,8 @@
         android:id="@+id/burgerContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/imageViewChef1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
-
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
