--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,12 +49,72 @@
         app:layout_constraintEnd_toEndOf="@+id/imageViewChef2"
         app:layout_constraintStart_toStartOf="@+id/imageViewChef2" />
 
-    <FrameLayout
-        android:id="@+id/burgerContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
 
-    </FrameLayout>
+    <!-- Kitchen Counter -->
+    <RelativeLayout
+        android:id="@+id/kitchenCounter"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="#E0E0E0"
+        android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8">
+
+        <FrameLayout
+            android:id="@+id/slot_0"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="20dp"
+            android:layout_centerVertical="true"
+            android:background="#CCCCCC" />
+
+        <FrameLayout
+            android:id="@+id/slot_1"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_toEndOf="@id/slot_0"
+            android:layout_marginStart="20dp"
+            android:layout_centerVertical="true"
+            android:background="#CCCCCC" />
+
+        <FrameLayout
+            android:id="@+id/slot_2"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_toEndOf="@id/slot_1"
+            android:layout_marginStart="20dp"
+            android:layout_centerVertical="true"
+            android:background="#CCCCCC" />
+
+        <FrameLayout
+            android:id="@+id/slot_3"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_toEndOf="@id/slot_2"
+            android:layout_marginStart="20dp"
+            android:layout_centerVertical="true"
+            android:background="#CCCCCC" />
+
+        <FrameLayout
+            android:id="@+id/slot_4"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_toEndOf="@id/slot_3"
+            android:layout_marginStart="20dp"
+            android:layout_centerVertical="true"
+            android:background="#CCCCCC" />
+    </RelativeLayout>
+
+    <FrameLayout
+    android:id="@+id/burgerContainer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:elevation="10dp"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
