--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:src="@drawable/grill"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-        app:layout_constraintTop_toBottomOf="@id/textViewChef4"
+        app:layout_constraintBottom_toTopOf="@id/kitchenCounter"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="16dp" />
 
