--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name="grid_index_tag" type="id"/>
     <item name="burger_value" type="id"/>
+    <item name="burger_transferred" type="id"/>
 </resources>
